tests/fixtures/compile_errors/numeric_capacity_mismatch/i16_neg.fe
contract Foo:
    pub def bar() -> i16:
        return i16(-32769)